--- a/pong.html
+++ b/pong.html
@@ -28,6 +28,10 @@ const maxPaddleY = canvas.height - grid - paddleHeight;
 
 var paddleSpeed = 6;
 var ballSpeed = 5;
+var tmA = 0;
+var tmB = 0;
+var scoreboard = "";
+context.font = "45px sans-serif";
 
 const leftPaddle = {
   // start in the middle of the game on the left side
