--- a/pong.html
+++ b/pong.html
@@ -25,7 +25,7 @@ const context = canvas.getContext('2d');
 const grid = 15;
 const paddleHeight = grid * 5; // 80
 const maxPaddleY = canvas.height - grid - paddleHeight;
-
+// Create Score Display and Augment point scoring
 var paddleSpeed = 6;
 var ballSpeed = 5;
 var tmA = 0;
