--- a/pong.html
+++ b/pong.html
@@ -3,19 +3,8 @@
 <head>
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
-  <style>
-  html, body {
-    height: 100%;
-    margin: 0;
-  }
+  <link href="style.css" rel="stylesheet">
 
-  body {
-    background: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  </style>
 </head>
 <body>
 <canvas width="750" height="585" id="game"></canvas>
