--- a/pong.html
+++ b/pong.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <canvas width="750" height="585" id="game"></canvas>
+<script type="text/javascript" src="scripts.js"></script>
 
 </body>
 </html>
