--- a/pong11.html
+++ b/pong11.html
@@ -28,6 +28,11 @@ const maxPaddleY = canvas.height - grid - paddleHeight;
 
 var paddleSpeed = 6;
 var ballSpeed = 5;
+// Augment Side Scoring and Create Score Display
+var tmA = 0;
+var tmB = 0;
+var scoreBoard = "";
+context.font = "40px serif";
 
 const leftPaddle = {
   // start in the middle of the game on the left side
@@ -118,6 +123,14 @@ function loop() {
 
   // reset ball if it goes past paddle (but only if we haven't already done so)
   if ( (ball.x < 0 || ball.x > canvas.width) && !ball.resetting) {
+    if (ball.x < 0) {
+      tmA += 1
+    }
+    if (ball.x > canvas.width) {
+      tmB += 1
+    }
+    scoreBoard = tmB + " - " + tmA;
+    context.filltext(scoreBoard, (canvas.width / 2 - grid / 2) - 300 ,(canvas.height / 2 - paddleHeight / 2) - 200)
     ball.resetting = true;
 
     // give some time for the player to recover before launching the ball again
@@ -156,6 +169,8 @@ function loop() {
   for (let i = grid; i < canvas.height - grid; i += grid * 2) {
     context.fillRect(canvas.width / 2 - grid / 2, i, grid, grid);
   }
+  scoreBoard = tmB + " - " + tmA;
+  context.filltext(scoreBoard, (canvas.width / 2 - grid  / 2) - 300 ,(canvas.height / 2 -paddleHeight / 2) - 200)
 }
 
 // listen to keyboard events to move the paddles
