--- a/pong.html
+++ b/pong.html
@@ -3,7 +3,7 @@
 <head>
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://slomohh.github.io/style.css">
 
 </head> 
 <body>
