--- a/pong.html
+++ b/pong.html
@@ -4,11 +4,9 @@
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="https://slomohh.github.io/style.css">
-
 </head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
-<script type="text/javascript" src="scripts.js"></script>
-
+<script src="scripts.js"></script>
 </body>
 </html>
