--- a/pong.html
+++ b/pong.html
@@ -7,6 +7,6 @@
 </head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
-<script src="scripts.js"></script>
+<script src="https://slomohh.github.io/scripts.js"></script>
 </body>
 </html>
