--- a/pong.html
+++ b/pong.html
@@ -3,10 +3,10 @@
 <head>
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="https://slomohh.github.io/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
-<script src="https://slomohh.github.io/scripts.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
