--- a/pong.html
+++ b/pong.html
@@ -3,7 +3,7 @@
 <head>
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
