--- a/pong.html
+++ b/pong.html
@@ -3,12 +3,10 @@
 <head>
   <title>Basic Pong HTML Game</title>
   <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet">
-
-</head>
+  <link rel="stylesheet" href="style.css">
+</head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
-<script type="text/javascript" src="scripts.js"></script>
-
+<script src="scripts.js"></script>
 </body>
 </html>
