--- a/pong.html
+++ b/pong.html
@@ -7,6 +7,10 @@
 </head> 
 <body>
 <canvas width="750" height="585" id="game"></canvas>
+  <p style="color:blue;">Score : </p>
+  <p id="tmA" style = "color:blue;"></p>
+  <p style="color:blue;"> - <p>
+  <p id="tmB" style="color:blue;"></p>
 <script src="scripts.js"></script>
 </body>
 </html>
