--- a/pong.html
+++ b/pong.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head> 
 <body>
+<div class="my-popup" id="my-popup">
+  <p class="results" id="results"></p>
+  <button class="rematch" id=”rematch” onclick="rematch()">Rematch</button>
+</div>
 <canvas width="750" height="585" id="game"></canvas>
   <p style="color:blue;">Score : </p>
   <p id="tmA" style = "color:blue;"></p>
