--- a/pong.html
+++ b/pong.html
@@ -11,10 +11,7 @@
   <button class="rematch" id=”rematch” onclick="rematch()">Rematch</button>
 </div>
 <canvas width="750" height="585" id="game"></canvas>
-  <p style="color:blue;">Score : </p>
-  <p id="tmA" style = "color:blue;"></p>
-  <p style="color:blue;"> - <p>
-  <p id="tmB" style="color:blue;"></p>
+  <p class="scoreboard" id="scoreboard"></p>
 <script src="scripts.js"></script>
 </body>
 </html>
